--- a/app/src/main/res/layout/fragment_alarm_clock_new01.xml
+++ b/app/src/main/res/layout/fragment_alarm_clock_new01.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/allLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,7 +36,7 @@
             android:layout_marginRight="120px"
             android:maxLines="1"
             android:paddingTop="@dimen/dp_20"
-            android:text="定点闹"
+            android:text="间隔闹"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16" />
 
