--- a/app/src/main/res/layout/fragment_alarm_clock_new01.xml
+++ b/app/src/main/res/layout/fragment_alarm_clock_new01.xml
@@ -64,6 +64,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -72,24 +74,232 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_20"
                 android:background="@drawable/shape_round_pop_bg_5"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/dp_10">
 
-                <TextView
-                    android:id="@+id/tv_time"
+                <!--       <TextView
+                           android:id="@+id/tv_time"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center"
+                           android:padding="@dimen/dp_4"
+                           android:text="" />
+
+
+                       <TimePicker
+                           android:id="@+id/time_picker"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:background="@color/white"
+                           android:theme="@style/Theme.picker"
+                           android:timePickerMode="spinner" />-->
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="@dimen/dp_4"
-                    android:text="" />
+                    android:layout_margin="@dimen/dp_10"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="@dimen/dp_10"
+                        android:text="起钟" />
 
-                <TimePicker
-                    android:id="@+id/time_picker"
+                    <com.healthclock.healthclock.widget.BorderTextView
+                        android:id="@+id/tv_getTime01"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:layout_margin="@dimen/dp_10"
+                        android:gravity="center"
+                        android:paddingBottom="@dimen/dp_4"
+                        android:paddingLeft="@dimen/dp_10"
+                        android:paddingRight="@dimen/dp_10"
+                        android:paddingTop="@dimen/dp_4"
+                        android:text="AI智能获取"
+                        android:textColor="?title_text_color"
+                        app:contentBackColor="@color/white"
+                        app:cornerRadius="5dp"
+                        app:strokeColor01="?title_text_color"
+                        app:strokeWidth01="1dp" />
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="@dimen/dp_10"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/hour01"
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:background="#F1F1F1"
+                        android:gravity="center"
+                        android:hint="10" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/dp_5"
+                        android:text="时" />
+
+                    <EditText
+                        android:id="@+id/minute01"
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:background="#F1F1F1"
+                        android:gravity="center"
+                        android:hint="30" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/dp_5"
+                        android:text="分" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/line"></View>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:theme="@style/Theme.picker"
-                    android:timePickerMode="spinner" />
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="@dimen/dp_10"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="@dimen/dp_10"
+                        android:text="每隔" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="@dimen/dp_50"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/hour02"
+                            android:layout_width="50dp"
+                            android:layout_height="30dp"
+                            android:background="#F1F1F1"
+                            android:gravity="center"
+                            android:hint="10" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_margin="@dimen/dp_5"
+                            android:text="时" />
+
+                        <EditText
+                            android:id="@+id/minute02"
+                            android:layout_width="50dp"
+                            android:layout_height="30dp"
+                            android:background="#F1F1F1"
+                            android:gravity="center"
+                            android:hint="30" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_margin="@dimen/dp_5"
+                            android:text="分" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/line"></View>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dp_10"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="@dimen/dp_10"
+                        android:text="止钟" />
+
+                    <com.healthclock.healthclock.widget.BorderTextView
+                        android:id="@+id/tv_getTime02"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:layout_margin="@dimen/dp_10"
+                        android:gravity="center"
+                        android:paddingBottom="@dimen/dp_4"
+                        android:paddingLeft="@dimen/dp_10"
+                        android:paddingRight="@dimen/dp_10"
+                        android:paddingTop="@dimen/dp_4"
+                        android:text="AI智能获取"
+                        android:textColor="?title_text_color"
+                        app:contentBackColor="@color/white"
+                        app:cornerRadius="5dp"
+                        app:strokeColor01="?title_text_color"
+                        app:strokeWidth01="1dp" />
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/hour03"
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:background="#F1F1F1"
+                        android:gravity="center"
+                        android:hint="10" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/dp_5"
+                        android:text="时" />
+
+                    <EditText
+                        android:id="@+id/minute03"
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:background="#F1F1F1"
+                        android:gravity="center"
+                        android:hint="30" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/dp_5"
+                        android:text="分" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
