--- a/app/src/main/res/layout/fragment_alarm_clock_new01.xml
+++ b/app/src/main/res/layout/fragment_alarm_clock_new01.xml
@@ -139,6 +139,7 @@
                         android:layout_width="50dp"
                         android:layout_height="30dp"
                         android:background="#F1F1F1"
+                        android:inputType="number"
                         android:gravity="center"
                         android:hint="10" />
 
@@ -154,6 +155,7 @@
                         android:layout_width="50dp"
                         android:layout_height="30dp"
                         android:background="#F1F1F1"
+                        android:inputType="number"
                         android:gravity="center"
                         android:hint="30" />
 
@@ -198,6 +200,7 @@
                             android:layout_width="50dp"
                             android:layout_height="30dp"
                             android:background="#F1F1F1"
+                            android:inputType="number"
                             android:gravity="center"
                             android:hint="10" />
 
@@ -213,6 +216,7 @@
                             android:layout_width="50dp"
                             android:layout_height="30dp"
                             android:background="#F1F1F1"
+                            android:inputType="number"
                             android:gravity="center"
                             android:hint="30" />
 
@@ -275,6 +279,7 @@
                         android:layout_width="50dp"
                         android:layout_height="30dp"
                         android:background="#F1F1F1"
+                        android:inputType="number"
                         android:gravity="center"
                         android:hint="10" />
 
@@ -289,6 +294,7 @@
                         android:id="@+id/minute03"
                         android:layout_width="50dp"
                         android:layout_height="30dp"
+                        android:inputType="number"
                         android:background="#F1F1F1"
                         android:gravity="center"
                         android:hint="30" />
