--- a/app/src/main/res/layout/activity_my_video.xml
+++ b/app/src/main/res/layout/activity_my_video.xml
@@ -6,4 +6,16 @@
     android:orientation="vertical"
     tools:context=".ui.activity.main.MyVideoActivity">
     <include layout="@layout/topbar_nor"></include>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/SwipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/RecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
